tests/snapshots/help/metrics__get.snap
---
source: tests/cli/snapshots.rs
---
Get metric details

Usage: vendo metrics get [OPTIONS] <metricId>

Arguments:
  <metricId>  

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo metrics get <metricId>
  $ vendo metrics get <metricId> --json
